--- a/css/dozy-app.webflow.css
+++ b/css/dozy-app.webflow.css
@@ -1233,7 +1233,10 @@ img.store-badge {
     display: none;
   }
   div.store-btn {
-    padding: 0 15px 30px 15px;
+    padding: 0 0 30px 0;
+  }
+  div.hero-text {
+    padding: 0 15px 0 15px
   }
 } 
 
@@ -1376,7 +1379,10 @@ img.store-badge {
     display: none;
   }
   div.store-btn {
-    padding: 0 2px 25px 2px;
+    padding: 0 0 25px 0;
+  }
+  div.hero-text {
+    padding: 0 6px 0 6px
   }
 }
 
