--- a/css/dozy-app.webflow.css
+++ b/css/dozy-app.webflow.css
@@ -1248,7 +1248,7 @@ img.store-badge {
     padding-top: 10px;
   }
   .h1 {
-    margin: 115px 6px 47px 15px;
+    margin: 115px 0 47px 0;
     font-size: 36px;
     line-height: 50px;
     font-weight: 900;
@@ -1266,9 +1266,7 @@ img.store-badge {
     border-radius: 5px;
   }
   .paragraph.hero {
-    margin-right: 15px;
     margin-bottom: 25px;
-    margin-left: 15px;
   }
   .iphone-container.download {
     top: 37%;
