--- a/css/dozy-app.webflow.css
+++ b/css/dozy-app.webflow.css
@@ -1248,7 +1248,7 @@ img.store-badge {
     padding-top: 10px;
   }
   .h1 {
-    margin: 115px 0 47px 0;
+    margin: 115px 2px 47px 4px;
     font-size: 36px;
     line-height: 50px;
     font-weight: 900;
@@ -1267,6 +1267,8 @@ img.store-badge {
   }
   .paragraph.hero {
     margin-bottom: 25px;
+    margin-left: 2px;
+    margin-right: 5px;
   }
   .iphone-container.download {
     top: 37%;
